# solo_ros

./: .clang-format  Dockerfile  LICENSE  README.md  solo.rosinstall  solo_ros.repos
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: lint.yml
solo/: CMakeLists.txt  package.xml
solo_controller/: CMakeLists.txt  package.xml  plugin.xml
solo_controller/config/: SoloController.cfg
solo_controller/include/solo_controller/: solo_controller.hpp
solo_controller/src/: solo_controller.cpp
solo_dashboard/: CMakeLists.txt  package.xml  plugin.xml
solo_dashboard/include/solo_dashboard/: rosnode.hpp  solo_dashboard.hpp
solo_dashboard/scripts/: solo_dashboard
solo_dashboard/src/: rosnode.cpp  solo_dashboard.cpp
solo_dashboard/ui/: solo_dashboard.ui
solo_description/: CMakeLists.txt  package.xml
solo_description/launch/: rviz.launch  solo_fixed_upload.launch  solo_rviz.launch  solo_upload.launch  solo_wholo_body_rviz.launch  upload.launch
solo_description/rviz/: display_whole_body_state.rviz
solo_description/urdf/: leg.xacro  solo12.gazebo.xacro  solo12.robot.xacro  solo12.transmission.xacro  solo12.urdf.xacro  solo12_fixed.robot.xacro
solo_driver/: CMakeLists.txt  package.xml
solo_driver/include/solo_driver/: deprecated.hpp  solo_driver.hpp
solo_driver/src/: deprecated.cpp  solo_driver.cpp
solo_gazebo/: CMakeLists.txt  package.xml
solo_gazebo/config/: solo_controller.yaml  solo_controller_gazebo.yaml
solo_gazebo/launch/: solo.launch  solo_fixed.launch
solo_hw_interface/: CMakeLists.txt  package.xml
solo_hw_interface/config/: imu_sensor_controller.yaml  solo_controller.yaml
solo_hw_interface/include/solo_hw_interface/: solo_hw_interface.hpp
solo_hw_interface/launch/: solo.launch
solo_hw_interface/src/: solo_control_node.cpp  solo_hw_interface.cpp
solo_planner/: CMakeLists.txt  package.xml
solo_planner/include/solo_planner/: solo_planner.hpp
solo_planner/src/: main.cpp  solo_planner.cpp
solo_planner_py/: CMakeLists.txt  package.xml
solo_planner_py/launch/: solo_planner_py.launch
solo_planner_py/resources/: ref_traj.p
solo_planner_py/scripts/: solo_planner_py
solo_ros/: CMakeLists.txt  package.xml
solo_teleop/: CMakeLists.txt  package.xml
solo_teleop/config/: ps4.yaml
solo_teleop/include/solo_teleop/: solo_teleop_joystick.hpp  solo_teleop_keyboard.hpp
solo_teleop/launch/: solo_teleop_joystick.launch
solo_teleop/src/: main_joystick.cpp  main_keyboard.cpp  solo_teleop_joystick.cpp  solo_teleop_keyboard.cpp
