<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solo_controller</name>
  <version>0.0.0</version>
  <description>ROS package for solo controller</description>
  <maintainer email="sjh2808@gmail.com">Jaehyun Shim</maintainer>
  <license>MIT</license>  <!-- TODO(JaehyunShim): Check what license will be used  -->
  <url type="repository">https://github.com/JaehyunShim/solo_ros</url>
  <author email="sjh2808@gmail.com">Jaehyun Shim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>ipab_controller_msgs</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>urdf</depend>
  <depend>whole_body_state_msgs</depend>

   <export>
    <controller_interface plugin="${prefix}/plugin.xml" />
  </export>
</package>
