<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solo_dashboard</name>
  <version>0.0.0</version>
  <description>ROS package for solo dashboard</description>
  <maintainer email="sjh2808@gmail.com">Jaehyun Shim</maintainer>
  <license>MIT</license>  <!-- TODO(JaehyunShim): Check what license will be used  -->
  <url type="repository">https://github.com/jaehyunshim/solo</url>
  <author email="sjh2808@gmail.com">Jaehyun Shim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt_gui_cpp</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>std_msgs</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
