<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solo_driver</name>
  <version>0.0.0</version>
  <description>ROS package for solo_driver</description>
  <maintainer email="sjh2808@gmail.com">Jaehyun Shim</maintainer>
  <license>MIT</license>  <!-- TODO(JaehyunShim): Check what license will be used  -->
  <url type="repository">https://github.com/JaehyunShim/solo_ros</url>
  <author email="sjh2808@gmail.com">Jaehyun Shim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>Eigen3</depend>
  <depend>master_board_sdk</depend>
  <depend>odri_control_interface</depend>
  <depend>sensor_msgs</depend>  <!-- temp -->

</package>
