<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>solo_ros</name>
  <version>0.0.0</version>
  <description>ROS metapackage for solo packages</description>
  <maintainer email="sjh2808@gmail.com">Jaehyun Shim</maintainer>
  <license>MIT</license>  <!-- TODO(JaehyunShim): Check what license will be used  -->
  <url type="repository">https://github.com/JaehyunShim/solo</url>
  <author email="sjh2808@gmail.com">Jaehyun Shim</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>solo_controller</exec_depend>
  <exec_depend>solo_dashboard</exec_depend>
  <exec_depend>solo_description</exec_depend>
  <exec_depend>solo_driver</exec_depend>
  <exec_depend>solo_gazebo</exec_depend>
  <exec_depend>solo_hw_interface</exec_depend>
  <exec_depend>solo_planner</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
